# cracking-the-coding-interview

./: flake.nix
01-arrays-and-strings/01-is-unique/: Cargo.toml
01-arrays-and-strings/01-is-unique/src/: main.rs
01-arrays-and-strings/02-check-permutations/: Cargo.toml
01-arrays-and-strings/03-urlify/: Cargo.toml
01-arrays-and-strings/03-urlify/src/: main.rs
01-arrays-and-strings/04-palindrome-permutation/: Cargo.toml
01-arrays-and-strings/05-one-away/: Cargo.toml
01-arrays-and-strings/06-string-compression/: Cargo.toml
01-arrays-and-strings/07-rotate-matrix/: Cargo.toml
01-arrays-and-strings/08-zero-matrix/: Cargo.toml
01-arrays-and-strings/09-string-rotation/: Cargo.toml
02-linked-lists/01-remove-dups/: Cargo.toml
08-recursion-and-dynamic-programming/01-triple-step/: Cargo.toml
08-recursion-and-dynamic-programming/02-robot-in-a-grid/: Cargo.toml
08-recursion-and-dynamic-programming/03-magic-index/: Cargo.toml
08-recursion-and-dynamic-programming/04-power-set/: Cargo.toml
08-recursion-and-dynamic-programming/05-recursive-multiply/: Cargo.toml
08-recursion-and-dynamic-programming/05-recursive-multiply/benches/: recursive_mul.rs  recursive_mul2.rs  recursive_mul3.rs  recursive_mul4.rs  recursive_mul5.rs
08-recursion-and-dynamic-programming/05-recursive-multiply/src/: lib.rs
08-recursion-and-dynamic-programming/06-towers-of-hanoi/: Cargo.toml
08-recursion-and-dynamic-programming/07-permutations-without-dups/: Cargo.toml
17-hard/01-add-without-plus/: Cargo.toml
17-hard/02-shuffle/: Cargo.toml
17-hard/03-random-set/: Cargo.toml
(+17 files in other folders)
